# python-nspfile

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_n_pub.yml
src/nspfile/: __init__.py
test/: test_read.py
