[metadata]
name = nspfile
version = attr: nspfile.__version__
description = Pentax Medical CSL NSP Audio File Format Reader
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia
license = GPL-2.0 License
url=https://tikuma-lsuhsc.github.io/python-nspfile
project_urls=
    Repository=https://github.com/tikuma-lsuhsc/python-nspfile
    Issues=https://github.com/tikuma-lsuhsc/python-nspfile/issues
    Pull Requests=https://github.com/tikuma-lsuhsc/python-nspfile/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=nspfile
install_requires =
    numpy
python_requires = >=3.6,
